# Simulations

./: .clangd  CMakeLists.txt  CMakePresets.json  LICENSE
cmake/toolchains/: clang.cmake  gcc.cmake
source/: numerical_methods.hpp
source/CNN/: README.md  cnn_core.cpp  cnn_core.hpp  cnn_example.cpp  cnn_utilities.cpp  cnn_utilities.hpp
source/DFT_Solver/: DFT_Solver.cpp
source/KP_Solver/: KP_Plot.jl  KP_Solver.cpp  README.md
